fix button signup too long

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -155,7 +155,7 @@ h2, h3, h4 {
         }
 
         @media screen and (max-width: 480px) {
-          margin: 0px 15px;
+          margin: 0px 23px;
         }
       }
 
